<resources>
    <string name="app_name">easyTeamUp</string>

    <!-- General Use Strings -->
    <string name="jib">JIB Inc.</string>
    <string name="api_key">AIzaSyC2LTXdp_6XbtLGhbf1FAAhDzk6iRJMe-Y</string>

    <!-- Strings related to Start Activity -->
    <string name="signup">Sign Up</string>
    <string name="signup_underline"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>

    <!-- Strings related to Login and Signup and Update Activities -->
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="fname">first name</string>
    <string name="lname">last name</string>
    <string name="phone">phone number</string>
    <string name="major">university major</string>
    <string name="year">graduation year</string>
    <string name="bio">write a short bio describing yourself…</string>
    <string name="photo">click the icon to upload a profile photo…</string>
    <string name="invalid_login">Invalid username-password combination; please try again!</string>
    <string name="invalid_signup">There was a problem signing up with this email; please try again!</string>
    <string name="invalid_name_phone">There was a problem setting your name or phone number; please try again!</string>
    <string name="invalid_school">There was a problem setting your major or graduation year; please try again!</string>
    <string name="invalid_bio">There was a problem setting your personal bio; please try again!</string>
    <string name="invalid_photo">There was a problem setting your profile photo; please try again!</string>
    <string name="update_profile_activity">Update Profile</string>
    <string name="leave_update_prompt">Are you sure you want to abandon your profile changes?</string>
    <string name="stay_on_update">No, keep modifying</string>
    <string name="change_password">Change password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="update">Update</string>


    <!-- Strings related to View Profile Activity -->
    <string name="w">Welcome</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="invitations">My Active Invitations</string>
    <string name="upcoming">My Upcoming Events</string>
    <string name="profile">My Profile Information</string>
    <string name="invited_events">View my Event Invitations</string>
    <string name="public_events">View Public Events</string>
    <string name="attending_events">View my RSVP\'d Events</string>
    <string name="hosted_events">View Events I\'m Hosting</string>
    <string name="host_event">Host an Event</string>
    <string name="view_history">View my Event History</string>
    <string name="update_profile">Update my Profile</string>
    <string name="logout">Log out</string>
    <string name="logout_ask">Are you sure you want to logout?</string>


    <!-- Strings related to No Events Fragment -->
    <string name="no_events_general">Oh no! It looks like no events matched your search…</string>
    <string name="no_invitations">Oh no! It looks like you have no event invitations…</string>
    <string name="no_rsvps">Oh no! It looks like you aren\'t attending any upcoming events…</string>
    <string name="no_public_events">Oh no! It looks like no public events matched your search parameters…</string>
    <string name="no_past_events">Oh no! It looks like you haven\'t attended any events yet…</string>
    <string name="no_hosting">Oh no! It looks like you aren\'t hosting any upcoming events…</string>
    <string name="view_profile">View my User Profile</string>
    <string name="browse_public_events_general">Browse Public Events</string>
    <string name="browse_public_events_list">Browse Public Events in a List</string>
    <string name="browse_public_events_map">Browse Public Events on the Map</string>
    <string name="view_invited_events_general">View my Current Invitations</string>
    <string name="view_invited_events_list">View my Invitations in a List</string>
    <string name="view_invited_events_map">View my Invitations on the Map</string>
    <string name="create_event">Create a New Event</string>

    <!-- Strings related to Public Events Dialog -->
    <string name="loc">Where are you looking for events?</string>
    <string name="dist">How far are you willing to travel?</string>
    <string name="use_map_list">Would you like to view events on a map or in a list?</string>
    <string name="curr_loc">Use my current location</string>
    <string name="other_loc">Search a location on the map</string>
    <string name="submit">Find public events!</string>
    <string name="miles">miles</string>
    <string name="map">map</string>
    <string name="list">list</string>

    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="location_picker_prompt">Search for a location, click the dot icon to use your current location, or pick a location by tapping on the map</string>

    <string name="usc">University of Southern California</string>
    <string name="use_usc">Search for events around University of Southern California</string>
    <string name="button_loc">Search for events around %1$s</string>

    <string name="no_location">No location currently selected.</string>
    <string name="selected_location">Searching for events around %1$s.</string>
    <string name="selection_error">Please make sure that you have entered a location and radius.</string>

    <!-- Strings related to Listing Events -->
    <string name="event_location">%1$s</string>
    <string name="invitation_status">Invitation %1$s</string>
    <string name="due_time">Due on %1$s</string>
    <string name="viewing_public">Viewing public events near %1$s</string>
    <string name="viewing_invitations">Viewing my invited events</string>
    <string name="viewing_rsvp">Viewing events I\'m attending</string>
    <string name="viewing_hosting">Viewing events I\'m hosting</string>
    <string name="viewing_past">Viewing my past events</string>
    <string name="view_map">View on the map</string>
    <string name="view_list">View in a list</string>

    <!-- Strings related to Event Details Dialog -->
    <string name="accept_invite">Accept this Invitation</string>
    <string name="reject_invite">Reject this Invitation</string>
    <string name="accept_public">Attend this Public Event</string>
    <string name="cancel">Cancel RSVP</string>
    <string name="reject_invite_dialog">Are you sure you want to reject this invitation?</string>
    <string name="reject_rsvp_dialog">Are you sure you don\'t want to attend %1$s anymore?</string>
    <string name="sure">Yes, I\'m sure</string>
    <string name="no">No, go back</string>
    <string name="pick_times">Pick one or more time ranges that work for you.</string>
    <string name="pick_range">Add your availability</string>
    <string name="pick_start_date">Pick a start day for your available range</string>
    <string name="pick_start_time">Pick a start time for your available range</string>
    <string name="pick_end_date">Pick an end day for your available range</string>
    <string name="pick_end_time">Pick an end time for your available range</string>
    <string name="submit_range">Add available date range</string>
    <string name="submit_times">Submit &amp; accept</string>
    <string name="no_times">No time ranges currently selected.</string>
    <string name="cncl">Cancel</string>
    <string name="view_host_times">View host availability</string>
    <string name="pick_date">Pick the day of your available time range</string>

    <!-- Notification Strings -->
    <string name="title">Title</string>
    <string name="todo">TODO</string>
    <string name="message">Message</string>


    <!-- Create event Strings -->
    <string name="create_new_event">Create a new event</string>
    <string name="event_title">Event title</string>
    <string name="event_address">Event address</string>
    <string name="event_description">Event description</string>
    <string name="public_or_private">Will your event be public or private?</string>
    <string name="pub">Public</string>
    <string name="priv">Private</string>
    <string name="invite_users">Invite 0 or more users to your event by searching their user ID</string>
    <string name="invite_user">Invite User</string>
    <string name="user_email">User email address</string>
    <string name="no_invited_users">No new users have been invited to your event.</string>
    <string name="add_availability">Add your event time availability</string>
    <string name="add_due">Set this event\'s due time</string>
    <string name="pick_due">Pick the due time</string>
    <string name="submit_event">Create Event</string>
    <string name="no_due_time">No due time currently selected</string>
    <string name="pick_due_time">Pick a due time</string>
    <string name="pick_due_date">Pick a due date</string>
    <string name="submit_due_time">Submit due date</string>
    <string name="stay_on_event">No, keep creating</string>
    <string name="leave_event">Yes, please leave</string>
    <string name="leave_event_prompt">Are you sure you want to abandon your new event?</string>
    <string name="event_length_text">How long is your event?</string>
    <string name="minutes">Event length in minutes</string>
    <string name="event_type">Event type</string>

    <!-- Host dialog -->
    <string name="update_event">Update event</string>
    <string name="delete_event">Delete event</string>
    <string name="see_rsvps">View RSVPed Users</string>
    <string name="see_invited">View Invited Users &amp; Status</string>
    <string name="go_back">Return to Event Details</string>


</resources>