<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/beige">
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/leave_event_prompt"
        android:textSize="18sp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stay_on_event"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/home"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leave_event"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/coral"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>
</LinearLayout>