<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/gray">
    <TextView
        android:id="@+id/logout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/logout_ask"
        android:fontFamily="@font/rubik_medium_italic"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/rubik_bold_italic"
            android:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/sure"
            android:fontFamily="@font/rubik_bold_italic"
            android:backgroundTint="@color/coral"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</LinearLayout>