<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="280dp"
    android:layout_height="400dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradients">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/x"
        />

    <TextView
        android:id="@+id/event_loc"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/loc"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@+id/close"
        app:layout_constraintBottom_toTopOf="@+id/current_loc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/current_loc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:backgroundTint="@color/white"
        android:text="@string/curr_loc"
        android:textColor="@color/gray"
        android:fontFamily="@font/rubik_regular_italic"
        android:textAllCaps="false"
        android:textSize="10sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/event_loc"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/other_loc"
         />
    <Button
        android:id="@+id/other_loc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/other_loc"
        android:textColor="@color/gray"
        android:fontFamily="@font/rubik_regular_italic"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/event_loc"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintStart_toEndOf="@+id/current_loc"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/distance"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/dist"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/other_loc"
        app:layout_constraintBottom_toTopOf="@+id/distance_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/distance_input"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="78dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/miles"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/miles"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toEndOf="@+id/distance_input"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/rubik_medium_italic"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="10sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_input" />

</androidx.constraintlayout.widget.ConstraintLayout>