<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/gray">
    <EditText
        android:id="@+id/old_pass"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        android:hint="@string/old_pass"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/new_pass"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        android:hint="@string/new_pass"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cncl"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/home"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/coral"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/error"
        android:layout_width="160dp"
        android:gravity="center"
        android:textSize="11sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular_italic"
        android:text=""
        android:textColor="@color/coral"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        />
</LinearLayout>